k8s/spartan-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spartan-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spartan
  template:
    metadata:
      labels:
        app: spartan
    spec:
      containers:
      - name: spartan
        image: aitigerlab/spartan-fix:latest
        imagePullPolicy: always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        # THE TRAP: We tell K8s to check a path that DOES NOT EXIST
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: spartan-service
spec:
  selector:
    app: spartan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
